--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,7 @@ dependencies {
 
     //snackbar
     implementation 'com.google.android.material:material:1.5.0'
+
+    // swipe rerfesh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
