Alarm  notification working and modify DataBase v4

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         </activity>
 
         <receiver android:name=".alerts.viewModel.AlarmReciever" />
+        <receiver android:name=".alerts.viewModel.DeleteAlarmReciever" />
     </application>
 
 </manifest>
